tests/docker/manifests/agentgateway-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentgateway-proxy-admin
  namespace: agentgateway-system
spec:
  ports:
    - name: http-admin
      port: 15000
      targetPort: 15000
  selector:
    gateway.networking.k8s.io/gateway-name: agentgateway-proxy
