tests/docker/manifests/agentgateway-route-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-admin
  namespace: agentgateway-system
spec:
  hostnames:
    - dev.localhost
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  rules:
    - backendRefs:
        - name: agentgateway-proxy-admin
          port: 15000
      matches:
        - path:
            type: PathPrefix
            value: /ui
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: Exact
            value: /config_dump
