tests/docker/manifests/agentgateway-route-authentik-outpost.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-outpost-agentgateway
  namespace: authentik
spec:
  hostnames:
    - agentgateway.localhost
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  rules:
    - backendRefs:
        - name: authentik-server
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
