tests/docker/manifests/agentgateway-route-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-backend
  namespace: agentgateway-system
spec:
  hostnames:
    - dev.localhost
  parentRefs:
    - name: agentgateway-proxy
  rules:
    - backendRefs:
        - kind: Service
          name: istio-test
          namespace: istio-test
          port: 8080
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /istio-test
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /agentgateway-test
