tests/docker/manifests/agentgateway-route-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-ingress
  namespace: agentgateway-system
spec:
  hostnames:
    - dev.localhost
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  rules:
    - backendRefs:
        - name: agentgateway-proxy
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /agentgateway-test
